--- a/talleres/templates/taller/eliminarPropuestaParaAprobar.html
+++ b/talleres/templates/taller/eliminarPropuestaParaAprobar.html
@@ -2,15 +2,14 @@
 {% block content %}
 <div class="container">
 	<div class="alert alert-success">
-		<strong>Propuesta enviada!</strong>tu propuesta: {{PropuestaNombre}} esta en espera de aprobación!.
+		<strong>Propuesta eliminada!</strong>
 	</div>
 
 	<div class="row">
 		<div class="col text-center">
-			<a href="{% url 'cargarPropuestas' %}" class="btn btn-info" role="button">Volver al ranking</a>
+			<a href="{% url 'propuestasParaAprobar' %}" class="btn btn-info" role="button">Volver</a>
 		</div>		
 	</div>
 
 </div>
-
 {% endblock %}
