se cambio el apartado visual del votar en la tabla

--- a/talleres/templates/taller/propuestas.html
+++ b/talleres/templates/taller/propuestas.html
@@ -18,7 +18,8 @@
 					      <tr>
 					        <td><a href="/propuesta/{{ d.IdPropuestaAprobada }}"><strong>{{d.PropuestaAprobadaNombre}}</strong></a></td>
 					        <td><strong>{{d.PropuestaAprobadaDetalle}}</strong></td>	
-					        <td><strong>{{d.vote_score}}</strong></td>		        
+					        <td><strong>{{d.vote_score}}</strong></td>	
+					        <td><a class="btn-lg btn-success" href="/propuesta/{{ d.IdPropuestaAprobada }}">Votar</a></td>	        
 					      </tr>			      
 					    </tbody>
 					    {% endfor %}
