se modifico el apartado visual de la votacion por propuestas

--- a/talleres/templates/taller/base.html
+++ b/talleres/templates/taller/base.html
@@ -65,7 +65,7 @@
             <ul>
               <li><a href="/politica">Política de privacidad</a></li>
               <li><a href="#">Dale la bienvenida a TallerE.C.</a></li>
-              <li><a href="#">Proyecto aceptado por la comuna de Estación central</a></li>
+              <li><a href="#">Proyecto aceptado por la comuna de Estación Central</a></li>
               <li><a href="#">Todo lo que debes saber de TallerE.C.</a></li>
             </ul>
           </div>
@@ -75,7 +75,7 @@
               <p><i class="fa fa-envelope"></i> tallerec.contacto@gmail.com</p>
             </a>
             <p><i class="fa fa-phone"></i> +22 69 85 569</p>
-            <p><i class="fa fa-home"></i> Proyecto TallerE.c. | Maipú <br> Santiago, Chile</p>
+            <p><i class="fa fa-home"></i> Proyecto TallerE.C. | Maipú <br> Santiago, Chile</p>
           </div>
         </div>
       </div>
