se arreglo error ortográfico en la pagina

--- a/talleres/templates/taller/propuestasDetalles.html
+++ b/talleres/templates/taller/propuestasDetalles.html
@@ -3,7 +3,7 @@
 <div id="containerDetallePropuesta" class="container">
 	<div class="row">
 		<div class="col text-center">
-			<h2>Afectua tu voto <br><small>Solo podras votar una vez por propuesta</small></h2>
+			<h2>Efectúa tu voto<br><small>Solo podras votar una vez por propuesta</small></h2>
 		</div>
 	</div>	
 	
