--- a/talleres/templates/taller/administrarTalleres.html
+++ b/talleres/templates/taller/administrarTalleres.html
@@ -4,7 +4,11 @@
 <div class="container">
 	<h2>Talleres</h2>
 		{% if talleres %}
-			<a href="/agregarTaller" class="btn-lg btn-info">Agregar Taller</a>				
+			<div class="row">
+				<div class="col text-right">
+					<a href="/agregarTaller" class="btn-lg btn-info">Agregar Taller</a>
+				</div>		
+			</div>							
 			<table class="table">
 				<thead>
 					<tr>
