se realizaron cambios menores en la página

--- a/talleres/templates/taller/index.html
+++ b/talleres/templates/taller/index.html
@@ -20,33 +20,33 @@
             </div>
             <p>Elegidos y creados por la comunidad para mejorar tu calidad de vida.</p>
             <div class="ficon">
-              <a href="#" class="btn btn-default" role="button">Mas Informacion</a>
+              <a href="talleres" class="btn btn-default" role="button">Mas Informacion</a>
             </div>
           </div>
         </div>
 
         <div class="col-md-4">
           <div class="wow bounceIn" data-wow-offset="0" data-wow-delay="1.0s">
-            <h4>Pagina Web responsiva</h4>
+            <h4>Propone tu taller/actividad!</h4>
             <div class="icon">
               <i class="fa fa-desktop fa-3x"></i>
             </div>
-            <p>Si no tienes posibilidad de verlo en pc, puedes verlo en tu celular.</p>
+            <p>Si tienes una idea de un taller para agregarla a nuestra comuna, dínosla.</p>
             <div class="ficon">
-              <a href="#" class="btn btn-default" role="button">Ver mas</a>
+              <a href="agregarPropuesta" class="btn btn-default" role="button">Ver mas</a>
             </div>
           </div>
         </div>
 
         <div class="col-md-4">
           <div class="wow bounceIn" data-wow-offset="0" data-wow-delay="1.6s">
-            <h4>Siempre un taller cerca de ti</h4>
+            <h4>Vota sobre los talleres de la comunidad</h4>
             <div class="icon">
               <i class="fa fa-location-arrow fa-3x"></i>
             </div>
-            <p>Este proyecto tenien como objetivo acercarte mas a ti a toda la comunidad a los talleres de la comuna.</p>
+            <p>Da tu opinion y vota sobre que tallers quieres en la comuna en el ranking de propuestas de la comunidad.</p>
             <div class="ficon">
-              <a href="{% url 'mapa' %}" class="btn btn-default" role="button">Ver Mas</a>
+              <a href="propuestas" class="btn btn-default" role="button">Ver Mas</a>
             </div>
           </div>
 
